--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -12,6 +12,8 @@ exec-once = hypridle & hyprpaper
 exec-once = hyprctl setcursor rose-pine-hyprcursor 24
 exec-once = gsettings set org.gnome.desktop.interface cursor-theme BreezeX-RosePine-Linux
 exec-once = gsettings set org.gnome.desktop.interface cursor-size 24
+exec-once = $HOME/projects/fluxo/target/release/fluxo >> $HOME/.config/fluxo/logs.txt
+exec-once = $HOME/projects/nest/target/release/nest
 
 exec-once = easyeffects --gapplication-service
 
