--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
-preload = /home/vince/projects/asciify/out.png
-wallpaper = eDP-1,/home/vince/projects/asciify/out.png
-wallpaper = HDMI-A-1,/home/vince/projects/asciify/out.png
+preload = ~/Pictures/wallpapers/wave.png
+wallpaper = eDP-1,~/Pictures/wallpapers/wave.png
+wallpaper = HDMI-A-1,~/Pictures/wallpapers/wave.png
