--- a/hypr/modules/general.conf
+++ b/hypr/modules/general.conf
@@ -5,6 +5,12 @@
 # Refer to https://wiki.hyprland.org/Configuring/Variables/
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
+ 
+misc {
+	vfr = true      
+}
+
+
 general {
 	gaps_in = 2
 	gaps_out = 4
@@ -31,13 +37,13 @@ animations {
     enabled = yes
 
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-    bezier = smooth, 0.87, 0, 0.13, 1
+    bezier = smooth, 0.25,0.1,0.25,1.0
 
-    animation = windows, 1, 2.5, smooth, popin
-    animation = layers, 1, 2.5, smooth, slide
-    animation = border, 1, 2.5, smooth
-    animation = fade, 1, 2.5, smooth
-    animation = workspaces, 1, 2.5, smooth 
+    animation = windows, 1, 1, smooth, popin
+    animation = layers, 1, 1, smooth, slide
+    animation = border, 1, 1, smooth
+    animation = fade, 1, 1, smooth
+    animation = workspaces, 1, 1, smooth 
 }
 
 # Ref https://wiki.hyprland.org/Configuring/Workspace-Rules/
