--- a/hypr/modules/input.conf
+++ b/hypr/modules/input.conf
@@ -10,7 +10,7 @@ input {
     kb_options = compose:ralt
     kb_rules =
 
-    follow_mouse = 1
+    follow_mouse = 0
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 	force_no_accel=1
@@ -22,7 +22,7 @@ input {
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
+    workspace_swipe_touch = false
 }
 
 # Example per-device config
