updated hyprland config

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,14 +1,11 @@
-# exec-once = ulauncher --hide-window
-
-
-# exec-once = hypridle & hyprpaper
+exec-once = hyprpaper
 
 exec-once = hyprctl setcursor rose-pine-hyprcursor 24
 exec-once = gsettings set org.gnome.desktop.interface cursor-size 24
-exec-once = $HOME/projects/fluxo/target/release/fluxo >> $HOME/.config/fluxo/logs.txt
+exec-once = $HOME/projects/thales/target/release/thales
 exec-once = $HOME/projects/nest/target/release/nest
 
-# exec = pkill waybar; sleep 1 && waybar
+exec = pkill waybar; sleep 1 && waybar
 
 # Colors
 source = ~/.config/hypr/modules/colors.conf
