--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -2,7 +2,7 @@ exec-once = hyprpaper
 
 exec-once = hyprctl setcursor rose-pine-hyprcursor 24
 exec-once = gsettings set org.gnome.desktop.interface cursor-size 24
-exec-once = $HOME/projects/thales/target/release/thales
+exec-once = $HOME/.cargo/bin/thales
 exec-once = $HOME/projects/nest/target/release/nest
 
 exec = pkill waybar; sleep 1 && waybar
