--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
-preload = ~/.dotfiles/assets/landscape.png
-wallpaper = eDP-1,~/.dotfiles/assets/landscape.png
-wallpaper = HDMI-A-1,~/.dotfiles/assets/landscape.png
+preload = ~/.dotfiles/assets/icarus.png
+wallpaper = eDP-1,~/.dotfiles/assets/icarus.png
+wallpaper = HDMI-A-1,~/.dotfiles/assets/icarus.png
