--- a/hypr/modules/binds.conf
+++ b/hypr/modules/binds.conf
@@ -12,7 +12,7 @@ bind = $mainMod SHIFT, P, exit,
 bind = $mainMod, R, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, E, exec, $menu
-bind = $mainMod, N, exec, hyprpanel toggleWindow settings-dialog
+bind = $mainMod, N, exec, rofi-network-manager
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
