--- a/hypr/modules/general.conf
+++ b/hypr/modules/general.conf
@@ -12,33 +12,31 @@ misc {
 
 
 general {
-	gaps_in = 2
-	gaps_out = 4
-
+	gaps_in = 5
+	gaps_out = 10
 	border_size = 2
 
    	col.active_border = $active_border  
 	col.inactive_border = $off_border
 
 	allow_tearing = false
-
 	layout = dwindle
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-	rounding = 4 
-	# https://wiki.hyprland.org/Configuring/Variables/#blur
+	rounding = 10
+	blur {
+        enabled = true
+        size = 3
+        passes = 3 
+        ignore_opacity = true 
+        new_optimizations = true
+    }
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#animations
-# Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 animations {
     enabled = yes
-
-    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
     bezier = smooth, 0.25,0.1,0.25,1.0
-
     animation = windows, 1, 1, smooth, popin
     animation = layers, 1, 1, smooth, slide
     animation = border, 1, 1, smooth
@@ -56,10 +54,9 @@ animations {
 # windowrule = bordersize 0, floating:0, onworkspace:f[1]
 # windowrule = rounding 0, floating:0, onworkspace:f[1]
 
-# See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
-	pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-	preserve_split = true # You probably want this
+	pseudotile = true 
+	preserve_split = true 
 }
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
@@ -67,11 +64,10 @@ master {
 	new_status = master
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
    disable_hyprland_logo = false
     col.splash = 0x665c54
     splash_font_family = RobotoMono Nerd Font
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
+    force_default_wallpaper = 0 
     vfr = true
 }
