--- a/hypr/modules/input.conf
+++ b/hypr/modules/input.conf
@@ -9,25 +9,27 @@ input {
     kb_model =
     kb_options = compose:ralt
     kb_rules =
-
-    follow_mouse = 0
-
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-	force_no_accel=1
-
-    touchpad {
-        natural_scroll = true 
-    }
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe_touch = false
+    workspace_swipe_touch = true
 }
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
 device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
+    name = apple-inc.-magic-trackpad
+    # Sens
+    sensitivity = 0
+    accel_profile = adaptive
+    # Scroll
+    natural_scroll = true
+    scroll_factor = 0.5
+    # Click and stuff
+    tap-to-click = true
+    tap-and-drag = true
+    clickfinger_behavior = true
 }
+
+gesture = 3, horizontal, workspace
