--- a/hypr/modules/binds.conf
+++ b/hypr/modules/binds.conf
@@ -13,6 +13,7 @@ bind = $mainMod, R, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, E, exec, $menu
 bind = $mainMod, N, exec, rofi-network-manager
+bind = $mainMod, B, exec, rofi-bluetooth
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
