--- a/hypr/modules/env.conf
+++ b/hypr/modules/env.conf
@@ -16,7 +16,7 @@ env = AQ_NO_MODIFIERS,1
 
 windowrulev2 = noblur, xwayland:1, initialClass:^(?:null|none|nil|undefined|\s*)$
 
-$terminal = ghostty 
+$terminal = alacritty 
 $fileManager = $terminal -e yazi
 $menu = rofi -show drun 
 
